# shwrap

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/bwrap/: mod.rs
src/cli/: mod.rs
src/config/: loader.rs  mod.rs
src/hooks/: bash.rs  bash_hook.sh  mod.rs
src/shell_hooks/: bash_hook.sh  fish_hook.fish  mod.rs  zsh_hook.sh
templates/: default.yaml  go.yaml  nodejs.yaml  python.yaml  ruby.yaml  rust.yaml
tests/: config_loader.rs  integration_test.rs
