[package]
name = "bwrap-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "bwrap_manager"
path = "src/lib.rs"

[[bin]]
name = "bwrap-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.8"
